# todo-app

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  vercel.json
.claude/skills/fastapi-crud-generator/: SKILL.md
.claude/skills/jwt-auth-integrator/: SKILL.md
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  database.py  pyproject.toml
backend/app/: __init__.py  auth.py  dependencies.py  main.py  models.py  schemas.py
backend/app/chatkit/: __init__.py  agent.py  context.py  conversation.py  server.py  tools.py
backend/app/mcp_server/: __init__.py  db.py  server.py
backend/app/models/: __init__.py  conversation.py  message.py
backend/app/routes/: __init__.py  tasks.py
backend/tests/: test_chat_integration.py  test_conversation_persistence.py  test_demo_script.py  test_mcp_tools.py  test_phase8_integration.py
frontend/: .env.example  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/lib/: api.ts  auth-client.ts  auth.ts
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fullstack-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-todo-chatbot/: data-model.md  demo-script.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  main.py
src/cli/: __init__.py  handlers.py  menu.py
src/models/: __init__.py  task.py
src/storage/: __init__.py  memory.py
(+84 files in other folders)
